# neuromorphic-screens

./: .gitignore  CMakeLists.txt  DOWNLOAD_REQUIREMENTS.md  Event-Based Vision Development.md  FLTK_INTEGRATION_PLAN.md  IMPLEMENTATION_PLAN.md  Low-Latency Event-Based Screen Capture & Streaming Implementation Strategy.md  README.md  REPORT.md  benchmark_parallelization.cpp  build_benchmark.bat  context.md  debug_udp_format.py  imgui.ini  run_streaming_test.py  simple_udp_test.py  streaming.md  test.aedat  test_streaming.bat  test_streaming_pipeline.py  test_streaming_simple.py  verify_udp_fix.py
.claude/: settings.local.json
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  numba
src/: main.cpp  main_gui.cpp  main_imgui.cpp  main_overlay.cpp  main_streaming.cpp  main_udp_streamer.cpp  streaming_app.cpp  streaming_app.h
src/capture/: screen_capture.cpp  screen_capture.h
src/core/: command_line_parser.h  event_file.cpp  event_file.h  event_file_formats.cpp  event_file_formats.h  event_types.h  streaming_app.cpp  streaming_app.h  temporal_index.h  timing.cpp  timing.h
src/streaming/: udp_event_streamer copy.cpp  udp_event_streamer.cpp  udp_event_streamer.h
src/test_UDP/: README.md  check_python_deps.py  neuromorphic_udp_visualizer.py  test_event_receiver.py  test_udp_simple.py
src/visualization/: direct_overlay_viewer.cpp  direct_overlay_viewer.h  event_viewer.cpp  event_viewer.h  imgui_event_viewer.cpp  imgui_event_viewer.h  imgui_streaming_viewer.cpp  imgui_streaming_viewer.h  imgui_viewer_base.cpp  imgui_viewer_base.h  simple_viewer.cpp  simple_viewer.h
